Bug 420674 - Large icons from extensions and themes are stretched in Addons manager. r=dtownsend a1.9b5=beltzner

--- a/toolkit/themes/pinstripe/mozapps/xpinstall/xpinstallConfirm.css
+++ b/toolkit/themes/pinstripe/mozapps/xpinstall/xpinstallConfirm.css
@@ -41,8 +41,6 @@ installitem {
 .xpinstallIconContainer {
   width: 32px;
   height: 32px;
-  max-width: 32px !important;
-  max-height: 32px !important;
   -moz-margin-end: 5px;
 }
 
@@ -66,6 +64,8 @@ installitem {
 }
 
 .xpinstallItemIcon {
+  max-width: 32px;
+  max-height: 32px;
   list-style-image: url("chrome://mozapps/skin/xpinstall/xpinstallItemGeneric.png");
 }
 
